@@ -12,6 +12,7 @@ Features:
 - Added profile field grouping functionality (tomasz.suchanek)
 - Added allowCaptcha property to UserModule, to controle whether Captcha is required (tomasz.suchanek)
 - Added new column for profile field definition: hint (tomasz.suchanek) 
+- Added getFormattedName to YumProfile (tomasz.suchanek)
 - Updated AR models documentation with phpdoc @property improve code usage (tomasz.suchanek)
 - Yum can by used as submodule. To avoid names confict all models are renamed:
  * Messages => YumMessages,
